fixed title spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -10187,6 +10187,7 @@ body {
   font-size: 2.5rem;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
+  margin-bottom: 3rem;
   background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(31, 7, 248, 0));  
   -webkit-background-clip: text;
           background-clip: text;
@@ -10195,6 +10196,17 @@ body {
   max-width: 20rem;
   font-size: 1rem;
 }
+
+.masthead h3 {
+  font-size: 1.3rem;
+}
+
+@media (min-width: 576px) {
+  .masthead h3 {
+    font-size: 1.75rem;
+  }
+}
+
 @media (min-width: 768px) {
   .masthead h1 {
     font-size: 4rem;
